--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Academic Project Page</title>
+  <title>OVE</title>
   <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
@@ -17,7 +17,14 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">Your Paper Title</h1>
+            <h1 class="title is-1 publication-title">
+              ObjVariantEnsemble: Advancing Point Cloud LLM Evaluation in Challenging Scenes with Subtly Distinguished Object
+            </h1>
+            <div class="is-size-5 publication-authors">
+              <span>Qihang Cao<sup>1</sup>, Huangxun Chen<sup>2</sup></span><br>
+              <span>1. Shanghai Jiaotong University, Shanghai, China</span><br>
+              <span>2. The Hong Kong University of Science and Technology (Guangzhou)</span>
+            </div>
             <div class="publication-links">
               <!-- Arxiv PDF link -->
               <span class="link-block">
@@ -29,7 +36,17 @@
                   <span>Paper</span>
                 </a>
               </span>
-              <!-- GitHub link -->
+              <!-- Supplementary PDF link -->
+              <span class="link-block">
+                <a href="static/pdfs/supplementary_material.pdf" target="_blank"
+                class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                    <i class="fas fa-file-pdf"></i>
+                  </span>
+                  <span>Supplementary</span>
+                </a>
+              </span>
+              <!-- Github link -->
               <span class="link-block">
                 <a href="https://github.com/YOUR_REPO" target="_blank"
                 class="external-link button is-normal is-rounded is-dark">
@@ -39,6 +56,16 @@
                   <span>Code</span>
                 </a>
               </span>
+              <!-- ArXiv abstract Link -->
+              <span class="link-block">
+                <a href="https://arxiv.org/abs/<ARXIV PAPER ID>" target="_blank"
+                class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                    <i class="ai ai-arxiv"></i>
+                  </span>
+                  <span>arXiv</span>
+                </a>
+              </span>
             </div>
           </div>
         </div>
@@ -46,6 +73,7 @@
     </div>
   </section>
   <!-- End Title Section -->
+
 
   <!-- Abstract Section -->
   <section class="section hero is-light">
