--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
   <link rel="stylesheet" href="static/css/bulma.min.css">
+  <link rel="stylesheet" href="static/css/bulma-carousel.min.css">
+  <link rel="stylesheet" href="static/css/bulma-slider.min.css">
   <link rel="stylesheet" href="static/css/fontawesome.all.min.css">
+  <link rel="stylesheet"
+  href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
+  <link rel="stylesheet" href="static/css/index.css">
 </head>
 <body>
   <!-- Title Section -->
@@ -31,7 +36,7 @@
                 <a href="https://arxiv.org/pdf/<ARXIV PAPER ID>.pdf" target="_blank"
                 class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
-                    <i class="fas fa-file-pdf"></i>
+                    <i class="ai ai-arxiv"></i>
                   </span>
                   <span>Paper</span>
                 </a>
@@ -56,16 +61,17 @@
                   <span>Code</span>
                 </a>
               </span>
-              <!-- ArXiv abstract Link -->
+             <!-- Dataset link -->
               <span class="link-block">
-                <a href="https://arxiv.org/abs/<ARXIV PAPER ID>" target="_blank"
+                <a href="https://example.com/dataset-link" target="_blank"
                 class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
-                    <i class="ai ai-arxiv"></i>
+                    <i class="fas fa-database"></i>
                   </span>
-                  <span>arXiv</span>
+                  <span>Dataset</span>
                 </a>
               </span>
+
             </div>
           </div>
         </div>
