--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
               <span>1. Shanghai Jiaotong University, Shanghai, China</span><br>
               <span>2. The Hong Kong University of Science and Technology (Guangzhou)</span>
             </div>
+            
             <div class="column has-text-centered">
               <div class="publication-links">
                 <!-- Arxiv PDF link -->
@@ -48,7 +49,7 @@
                   <a href="static/pdfs/OVE_suppl__for_AAAI.pdf" target="_blank"
                   class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
-                      <i class="fas fa-file-pdf"></i>
+                      <i class="fa fa-file-pdf"></i>
                     </span>
                     <span>Supplementary</span>
                   </a>
@@ -70,7 +71,7 @@
                   <a href="https://github.com/OVE-Benchmark/OVE" target="_blank"
                   class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
-                      <i class="fas fa-database"></i>
+                      <i class="fa fa-database"></i>
                     </span>
                     <span>Dataset</span>
                   </a>
