--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </h1>
             <div class="is-size-5 publication-authors">
               <span>Qihang Cao<sup>1</sup>, Huangxun Chen<sup>2</sup></span><br>
-              <span>1. Shanghai Jiaotong University, Shanghai, China</span><br>
+              <span>1. Shanghai Jiaotong Universit</span><br>
               <span>2. The Hong Kong University of Science and Technology (Guangzhou)</span>
             </div>
             
