--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>OVE</title>
   <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
-  <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
-  rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro" rel="stylesheet">
   <link rel="stylesheet" href="static/css/bulma.min.css">
   <link rel="stylesheet" href="static/css/bulma-carousel.min.css">
   <link rel="stylesheet" href="static/css/bulma-slider.min.css">
@@ -20,22 +19,22 @@
   <section class="hero">
     <div class="hero-body">
       <div class="container is-max-desktop">
-        <div class="columns is-centered">
+        <div class=" columns is-centered">
           <div class="column has-text-centered">
             <h1 class="title is-1 publication-title">
               ObjVariantEnsemble: Advancing Point Cloud LLM Evaluation in Challenging Scenes with Subtly Distinguished Object
             </h1>
             <div class="is-size-5 publication-authors">
-              <span>Qihang Cao<sup>1</sup>, Huangxun Chen<sup>2</sup></span><br>
-              <span>1. Shanghai Jiaotong University</span><br>
-              <span>2. The Hong Kong University of Science and Technology (Guangzhou)</span>
+              <span>Qihang Cao<sup>1,2</sup>, Huangxun Chen<sup>2</sup></span><br>
+              <span>1. Shanghai Jiao Tong University</span><br>
+              <span>2. Hong Kong University of Science and Technology (Guangzhou)</span>
             </div>
             
             <div class="column has-text-centered">
               <div class="publication-links">
                 <!-- Arxiv PDF link -->
                 <span class="link-block">
-                  <a href="https://arxiv.org/pdf/<ARXIV PAPER ID>.pdf" target="_blank"
+                  <a href="https://doi.org/10.48550/arXiv.2412.14837" target="_blank"
                   class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="ai ai-arxiv"></i>
@@ -49,7 +48,7 @@
                   <a href="static/pdfs/OVE_suppl__for_AAAI.pdf" target="_blank"
                   class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
-                      <i class="fa fa-file-pdf"></i>
+                      <i class="fas fa-file-pdf"></i>
                     </span>
                     <span>Supplementary</span>
                   </a>
@@ -71,7 +70,7 @@
                   <a href="https://github.com/OVE-Benchmark/OVE" target="_blank"
                   class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
-                      <i class="fa fa-database"></i>
+                      <i class="fas fa-database"></i>
                     </span>
                     <span>Dataset</span>
                   </a>
